Fix transparent iframes with composited contents in WK1 on Mac https://bugs.webkit.org/show_bug.cgi?id=76478

Reviewed by Simon Fraser.

Test: compositing/iframes/repaint-after-losing-scrollbars.html

* page/FrameView.cpp:
(WebCore::FrameView::useSlowRepaints):


Canonical link: https://commits.webkit.org/105579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118840 268f45cc-cd09-0410-ab3c-d52691b4dbfc